crates/plotnik-lib/tests/05-typegen/definitions/error_optional_rooted_def_row_element_unnamed.txt
Bad = (expression_statement (identifier) @id)?
------------------ DIAGNOSTICS -------------------
error: the definition names the optional itself, so each `?` element — a row of captures — is left without a type name
 --> query.ptk:1:7
  |
1 | Bad = (expression_statement (identifier) @id)?
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: name the element type in its own definition, then quantify a reference to it: `Elem = ...` and `(Elem)?`
